--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppConfig": {
-    "Endpoint": "https://appconfig.azconfig.io"
+    "Endpoint": "https://myownappconfig.azconfig.io"
   },
   "Logging": {
     "LogLevel": {
